# hanymorcos.github.io

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  _config.yml  articles.html  contact.html  expertise.html  index.html  index.md  next.config.js  next.config.mjs  now.html  package-lock.json  package.json  resizer.py  rss.xml  sitemap.xml  work.html
.github/workflows/: ci.yml
_data/: navigation.yml
_includes/: topnav.html
_layouts/: default.html
_posts/: 2018-03-17-Stix2-Validation.md
_sass/: _navigation.scss
articles/: 1-Adding-Google-Analytics-to-NextJS.html  First-article.html  binary-tree-insertion-in-rust.html
components/Article/: Article.tsx
components/Author/: Author.tsx
components/Bio/: Bio.tsx
components/Comment/: Comment.tsx
components/Contact/: Contact.tsx
components/Footer/: Footer.tsx
components/Hero/: Hero.module.css  Hero.tsx
components/Intro/: Intro.tsx
components/Menubar/: Menubar.tsx
components/Nav/: Nav.tsx
components/Project/: Project.tsx
components/Publication/: Publication.tsx
components/Recommendation/: Recommendation.tsx
components/SeoContainer/: SeoContainer.tsx
data/: articles.ts
data/content/: now.mdx
data/meta/: pinnedGitHubRepos.json  socials.json
lib/: useScript.ts
pages/: _app.tsx  _document.tsx  contact.tsx  expertise.tsx  index.tsx  now.tsx  work.tsx
public/: site.webmanifest
scripts/: github.mjs  rss.mjs
stix2/: index.html
utils/: analytics.ts  gtag.ts
wasm/fulltext-search/: Cargo.toml
wasm/fulltext-search/pkg/: fulltext_search_core_bg.wasm  package.json
(+193 files in other folders)
